--- a/index.html
+++ b/index.html
@@ -7,15 +7,28 @@
 </head>
 <body>
   <main>
-    <header>
-      <h1>Sign Up Form</h1>
-    </header>
-    <form>
-      <div>
-        <label for="firstname">First Name:</label>
-        <input type="text" name="firstname" id="firstname">
-      </div>
-    </form>
+    <div class="sidebar_image">
+      <h1 class="heading">TEAM</h1>
+    </div>
+    <div class="container">
+      <form>
+        <div>
+          <div class="field">
+            <label for="firstname">First Name</label>
+            <input type="text" name="firstname" id="firstname">
+          </div>
+          <div class="field">
+            <label for="firstname">Last Name</label>
+            <input type="text" name="firstname" id="firstname">
+          </div>
+          <div class="field">
+            <label for="firstname">Email</label>
+            <input type="text" name="firstname" id="firstname">
+          </div>
+        </div>
+        <button type="submit">Create Account</button>
+      </form>
+    </div>
   </main>
 </body>
 </html>
