--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Sign up Form</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <main>
@@ -11,23 +12,41 @@
       <h1 class="heading">TEAM</h1>
     </div>
     <div class="container">
+      <p class="top-message">This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up now to get started <br> <span>You know you want to</span></p>
       <form>
-        <div>
-          <div class="field">
-            <label for="firstname">First Name</label>
-            <input type="text" name="firstname" id="firstname">
-          </div>
-          <div class="field">
-            <label for="firstname">Last Name</label>
-            <input type="text" name="firstname" id="firstname">
-          </div>
-          <div class="field">
-            <label for="firstname">Email</label>
-            <input type="text" name="firstname" id="firstname">
+        <div class="inputs-wrapper">
+          <h3>Lets do this</h3>
+          <div class="form-inputs">
+            <div class="field">
+              <label for="firstname">First Name</label>
+              <input type="text" name="firstname" id="firstname">
+            </div>
+            <div class="field">
+              <label for="lastname">Last Name</label>
+              <input type="text" name="lastname" id="lastname">
+            </div>
+            <div class="field">
+              <label for="email">Email</label>
+              <input type="email" name="email" id="email">
+            </div>
+            <div class="field">
+              <label for="telephone">Phone Number</label>
+              <input type="tel" name="phone-number" id="telephone">
+            </div>
+            <div class="field">
+              <label for="password">Password</label>
+              <input type="password" name="password" id="password">
+              <span class="errors"></span>
+            </div>
+            <div class="field">
+              <label for="confirm-password">Confirm Password</label>
+              <input type="password" name="password" id="confirm-password">
+            </div>
           </div>
         </div>
         <button type="submit">Create Account</button>
       </form>
+      <p>Already have an account? <a>Log in</a></p>
     </div>
   </main>
 </body>
